--- a/Day-35/.env
+++ b/Day-35/.env
@@ -1,2 +1,2 @@
-AUTH_TOKEN = "ca9b0d7c39339b9a000231787f978704"
-ACCOUNT_SID = "AC9ae698970df25fc743528d83a2cc99df"
+AUTH_TOKEN = "[AUTH_TOKEN_FROM_TWILLIO]"
+ACCOUNT_SID = "[ACCOUNT_SID_FROM_TWILLIO]"
